# air-quality-monitor

./: Cargo.toml  README.md  air-quality-monitor.uf2  build.rs
.cargo/: config.toml
enclosure/: Back Lid.20250614-081732.FCBak  Back Lid.3mf  Back Lid.FCStd  Bambu Studio Print Project.3mf  Enclosure-Body.3mf  Enclosure-Bottom.3mf  Enclosure-Lid.3mf  Enclosure.FCStd  EnclosureComplete.20250614-085029.FCBak  EnclosureComplete.20250614-170854.FCBak  EnclosureComplete.FCStd  Main Body.3mf  print.3mf
firmware/src/: main.rs
i2c-initialized-permanent/: Cargo.toml
i2c-initialized-permanent/src/: main.rs
src/: display.rs  display_state.rs  event.rs  humidity_calibrator.rs  main.rs  orchestrate.rs  sensor.rs  system_state.rs  vbus.rs  vsys.rs  watchdog.rs
